# dinov3-text-alignment

./: README.md  export.py  main.py  pyproject.toml  train.py
src/: dinov3_text_align.py  image_encoder.py  loss.py  text_encoder.py
