[project]
name = "dinov3-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "pillow>=12.0.0",
    "ruff>=0.14.10",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "torchvision>=0.24.1",
    "datasets==2.18.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
